--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<!-- header of the webpage containing links to corresponding parts of webpage-->
+<!-- header with links-->
 
     <div class="header">
 
@@ -17,8 +17,8 @@
         <div>
             <ul>
                 <li>
-                    <!-- links to correspondnding topics on webpage. When clocked they will take you to that de
-                    scriptive paragraph-->
+                    <!-- links to correspondnding topics on webpage-->
+                    
                     <!-- fixed faulty link for Search Engine Optimization -->
 
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -32,39 +32,39 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
 
     <!-- large, first image on page -->
 
-    <div class="content">
+    <div class="hero"></div>
 
-        <!-- search engine optimization info block -->
+    <!-- image 1 block -->
+    <div class="content">
 
         <div id="search-engine-optimization" class="search-engine-optimization">
 
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="content-image-1" class="float-left">
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
 
-        <!-- online reputation management info block -->
+        <!-- image 2 block -->
 
         <div id="online-reputation-management" class="online-reputation-management">
 
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="content-image-2" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
 
-        <!-- social media marketing info block -->
+        <!-- image 3 block -->
 
         <div id="social-media-marketing" class="social-media-marketing">
 
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left"/>
+            <img src="./assets/images/social-media-marketing.jpg" alt="content-image-3" class="float-left"/>
 
             <h2>Social Media Marketing</h2>
             <p>
@@ -73,26 +73,26 @@
         </div>
     </div>
 
-    <!-- sidebar of benefits-->
+    <!-- sidebar-->
 
     <div class="benefits">
 
-        <!-- sidebar block titled Lead Generation -->
+        <!-- sidebar block 1 -->
 
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="sidebar-icon-1" />
 
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
 
-        <!-- sidebar block titled Brand Awareness -->
+        <!-- sidebar block 2 -->
 
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="sidebar-icon-2" />
 
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -100,11 +100,11 @@
         </div>
 
 
-        <!-- sidebar block titled Cost Management -->
+        <!-- sidebar block 3 -->
 
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="sidebar-icon-3" />
 
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
